# sts-project

./: .gitignore  CMakeLists.txt  readme.md
sts/: CMakeLists.txt  CMakeLists.txt.orig
sts/config/: README.txt  ogre.cfg.example  plugins.cfg.example
sts/config/debug/: README.txt
sts/data/materials/: Airship_surface.material  enemy_01.material
sts/data/models/: airship.mesh
sts/data/text/: entities.json  muzzle_flash_styles.json  unit_types.json  weapon_behaviours.json  weapons.json
sts/data/text/levels/: level1.json
sts/src/: MyFrameListener.cpp  MyFrameListener.hpp  SoundManager.cpp  bullet.cpp  bullet.hpp  entity.hpp  game_data.cpp  game_data.hpp  game_object.cpp  game_object.hpp  move.cpp  move.hpp  sts.hpp  sts_cross_platform.hpp  sts_game_root.cpp  sts_game_root.hpp  sts_level_generator.cpp  sts_level_generator.hpp  sts_main.cpp  sts_main.cpp.orig  sts_resources.cpp  sts_resources.hpp  weapon.cpp  weapon.hpp
sts/src/gameplay/: sts_unit.cpp  sts_unit.hpp  sts_unit_type.cpp  sts_unit_type.hpp
sts/src/gameplay/motion/: sts_motion_behavior.cpp  sts_motion_behavior.hpp  sts_motion_state.hpp
sts/src/gameplay/statemachine/: sts_permanent_state.cpp  sts_permanent_state.hpp  sts_sm_permanent_state.cpp  sts_sm_permanent_state.hpp  sts_sm_state.cpp  sts_sm_state.hpp  sts_sm_transition.hpp  sts_state.cpp  sts_state.hpp  sts_transition.hpp  sts_unit_state_sequence.cpp  sts_unit_state_sequence.hpp
sts/src/gameplay/weaponry/: sts_aiming_behavior.cpp  sts_aiming_behavior.hpp  sts_bullet.cpp  sts_bullet.hpp  sts_bullet_style.cpp  sts_bullet_style.hpp  sts_firing_behavior.cpp  sts_firing_behavior.hpp  sts_firing_state.hpp  sts_firing_style.cpp  sts_firing_style.hpp  sts_muzzle_flash_style.hpp  sts_weapon.cpp  sts_weapon.hpp  sts_weapon_state.cpp  sts_weapon_state.hpp
sts/src/input/: sts_key.cpp  sts_key.hpp
sts/src/ois/: MyFrameListener.cpp  MyFrameListener.hpp
sts/src/rendering/: sts_attachable.hpp  sts_model3d.cpp  sts_model3d.hpp  sts_model3d_attachable.hpp  sts_renderable.cpp  sts_renderable.hpp  sts_sprite2d.cpp  sts_sprite2d.hpp  sts_sprite2d_attachable.hpp
sts/src/scene/: sts_layer.cpp  sts_layer.hpp  sts_layered_object.cpp  sts_layered_object.hpp  sts_object_group.hpp  sts_scene_manager.cpp  sts_scene_manager.hpp  sts_scene_object.cpp  sts_scene_object.hpp  sts_shared_object.cpp  sts_shared_object.hpp  sts_shared_object_group.cpp  sts_shared_object_group.hpp
sts/src/sound/: SoundManager.hpp
